reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__work.rs_line_25_col_5_001.log

*** crates/tracewake-core/src/actions/defs/work.rs:25:5: replace build_work_start_events -> Result<Vec<EventEnvelope>, ActionRejection> with Ok(vec![Default::default()])

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/work.rs
+++ replace build_work_start_events -> Result<Vec<EventEnvelope>, ActionRejection> with Ok(vec![Default::default()])
@@ -17,108 +17,17 @@
 
 pub fn build_work_start_events(
     state: &PhysicalState,
     agent_state: &AgentState,
     proposal: &Proposal,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
 ) -> Result<Vec<EventEnvelope>, ActionRejection> {
-    let actor_id = proposal.actor_id.clone().ok_or_else(actor_missing)?;
-    let actor = state.actors.get(&actor_id).ok_or_else(actor_missing)?;
-    let workplace_id = workplace_target(proposal)?;
-    let workplace = state.workplaces.get(&workplace_id).ok_or_else(|| {
-        reject(
-            PipelineStage::TargetBinding,
-            ReasonCode::TargetNotFound,
-            "workplace_id",
-            workplace_id.as_str(),
-            "That workplace is not present.",
-            "work target was missing from physical state",
-        )
-    })?;
-
-    if actor.current_place_id != workplace.place_id {
-        return Ok(vec![work_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            workplace,
-            "access",
-            "actor not at workplace",
-        )]);
-    }
-    if !workplace.access_open {
-        return Ok(vec![work_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            workplace,
-            "access",
-            "workplace access closed",
-        )]);
-    }
-    if !workplace.assigned_actor_ids.is_empty() && !workplace.assigned_actor_ids.contains(&actor_id)
-    {
-        return Ok(vec![work_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            workplace,
-            "physical",
-            "actor not assigned to workplace",
-        )]);
-    }
-    let Some(current_fatigue) = need_value(agent_state, &actor_id, NeedKind::Fatigue) else {
-        return Ok(vec![work_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            workplace,
-            "need",
-            "fatigue state missing for work",
-        )]);
-    };
-    if i32::from(current_fatigue) > workplace.max_fatigue_to_start {
-        return Ok(vec![work_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            workplace,
-            "need",
-            "fatigue too high for work",
-        )]);
-    }
-    let Some(current_hunger) = need_value(agent_state, &actor_id, NeedKind::Hunger) else {
-        return Ok(vec![work_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            workplace,
-            "need",
-            "hunger state missing for work",
-        )]);
-    };
-    if i32::from(current_hunger) > workplace.max_hunger_to_start {
-        return Ok(vec![work_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            workplace,
-            "need",
-            "hunger too high for work",
-        )]);
-    }
-
-    Ok(vec![work_started_event(
-        proposal,
-        ordering_key,
-        content_manifest_id,
-        workplace,
-    )])
+    Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
 }
 
 pub fn build_work_completion_events(
     state: &PhysicalState,
     agent_state: &AgentState,
     log: &EventLog,
     work_started_event: &EventEnvelope,
     ordering_key: &OrderingKey,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/defs/work.rs` has changed (1781911647.899924320s, 5s after last build at 1781911642.987924320s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/work.rs:25:13
    |
 25 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/work.rs:25:13
    |
 25 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
